<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.fragments.AddNoteFragment">


    <!-- TODO: Update blank fragment layout -->

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spaceMedium"
        android:layout_marginTop="@dimen/spaceMedium"
        android:layout_marginEnd="@dimen/spaceMedium"
        android:visibility="gone"
        android:background="@drawable/textview_border_item"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:hapticFeedbackEnabled="true"
        android:theme="@style/MyDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showDatePickerButton" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="@dimen/spaceDefault"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spaceMedium"
        android:layout_marginTop="@dimen/spaceMedium"
        android:layout_marginEnd="@dimen/spaceMedium"
        android:background="@drawable/textview_border_item"
        android:theme="@style/MyDatePicker"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextViewPrimary"
        android:layout_width="@dimen/spaceDefault"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/spaceSmall"
        android:paddingBottom="@dimen/spaceSmall"
        android:text="@string/new_note"
        android:textColor="@color/rec_item"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        style="@style/TextViewPrimary"
        android:layout_width="@dimen/spaceDefault"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spaceMedium"
        android:background="@drawable/textview_border_item"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spaceLarge"
        android:background="@drawable/textview_border_cancel_button"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="@dimen/spaceDefault"
        android:layout_height="@dimen/spaceDefault"
        android:layout_marginTop="@dimen/spaceMedium"
        android:layout_marginBottom="@dimen/spaceMedium"
        android:background="@drawable/textview_border_floating_button"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/description"
        android:padding="@dimen/spaceMedium"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:maxLines="10"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="@+id/timePicker"
        app:layout_constraintStart_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />

    <Button
        android:id="@+id/showDatePickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spaceMedium"
        android:layout_marginTop="@dimen/spaceSmall"
        android:layout_marginEnd="@dimen/spaceMedium"
        android:background="@drawable/textview_border_item"
        android:text="@string/choice_date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>